--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -3,12 +3,12 @@
 - name: Remove previous values
   lineinfile:
     dest: /etc/environment
-    regexp: '^{{ item.key | upper }}'
+    regexp: '^{{ item.key }}'
     state: absent
   with_dict: environment_config
 
 - name: Configuring environment
   lineinfile:
     dest: /etc/environment
-    line: '{{ item.key | upper }}="{{ item.value }}"'
+    line: '{{ item.key }}="{{ item.value }}"'
   with_dict: environment_config
